# Nmap Changelog ($Id$); -*-text-*-

o [Ndiff] Fixed the Mac OS X packages to use the correct path for
  Python: /usr/bin/python instead of /opt/local/bin/python. The bug
  was reported by Wellington Castello. [David]

o [NSE] Added nping-brute.nse by Toni Ruottu, which tries to guess
  the passphrase of an Nping Echo server.

o Removed the -sR (RPC scan) option--it is now an alias for -sV
  (version scan), which always does RPC scan when appropriate.

o [NSE] Added dns-brute.nse by cirrus, a brute-force DNS name
  enumerator.

o [NSE] Merged the ms-sql branch with several improvements and changes to the
  ms-sql scripts and library:
  - Improved version detection
  - Improved server discovery
  - Add support for named pipes
  - Add support for integrated authentication
  - Add support for connecting to instances by name or port
  - Improved script and library stability
  - Improved script and library documentation
 [Patrik Karlsson, Chris Woodbury]

o [NSE] Added probe for Apple iPhoto (DPAP) and the dpap-brute script that
  performs password guessing against a shared iPhoto library. [Patrik]

o [NSE] Fixed http.validate_options when handling a cookie table.
  [Sebastian Prengel]

o [NSE] Added quake3-master-getservers, which gets a list of live
  Quake 3 servers from a master server. (It also works for many
  similar games.) [Toni Ruottu]

o Added a Service Tags UDP probe for port 6481/udp. [David]

o [NSE] Added servicetags.nse, which queries the Sun Service Tags
  agent and gets system information. [Matthew Flanagan]

o [NSE] Enhanced firewalk.nse to automatically find the gateways at
  which probes are dropped. [Henri Doreau]

o [NSE] Use the correct script name in the usage example of the
  smtp-enum-users script. Reported by Jamuse, who also contributed
  a patch.
  
o [NSE] db2-das-info - Corrected a bug that caused the script to fail
  when DB2 Discovery mode is disabled on the DAS service on port 523.
  [Tom]
  